# codetri-webhook

./: .dockerignore  .env  .gitattributes  .gitignore  README.md  docker-compose.yml  get-requirements.py  install.sh  pyproject.toml  run-app.sh  run-supervisord.sh  stop.sh  supervisord.conf  wsgi.py
configuration/: default.json  development.json  production.json  supervisord.conf
docker/: Dockerfile  docker-compose.yml
hooks/: sample.json
samples/hooks/: github-form.json  github-json.json  github.json  sample.json  simple.json
samples/services/: GHPush.py  GHPushForm.py  GHPushJSON.py  GitHubFormData.py  GitHubJSONData.py  Sample.py  Simple.py
scripts/: install.sh  run-app.sh  start.sh
secrets/: SECRET_KEY
src/: app_factory.py  blueprints.py  main.py
src/core/: app_config.py  config.py  helpers.py  logger.py
src/core/services/: BaseMixin.py  GitHub.py  GitHubAuthMixin.py  Sample.py  __init__.py  base.py
src/views/: root.py
