[tool.poetry]
name = "codetri-webhook"
version = "0.5.0"
description = "A small webhook responder"
authors = ["Caleb <le717@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
supervisor = "^4.2.5"
sys-vars = "^5.0.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
